syntax = "proto3";

package pb;

import "address.proto";
import "product.proto";

option go_package = "github.com/Arthur199212/microservices-demo/src/shipping/pb";

message GetQuoteRequest {
  Address address = 1;
  repeated Product products = 2;
}

message GetQuoteResponse {
  float quote = 1;
  string currencyCode = 2;
}
